Cloud deploy (Caddy+Neon+Upstash), passwordless auth, cryptic game